--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,7 @@
+* {
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+}
+
 .header {
     
     background-color: #1F2937;
@@ -7,8 +11,8 @@
 }
 
 .logo img {
-    height: 40px;
-    width: 100px;
+    height: 50px;
+    width: 130px;
 }
 
 .logo {
@@ -18,26 +22,162 @@
 }
 
 .link-one {
-    flex: 0 1 100px;
+    flex: 0 1 120px;
 }
 
 .link-two,
 .link-three {
-    flex: 0 1 170px;
+    flex: 0 1 200px;
 }
 .link-three{
     margin-right: 100px ;
 }
 
+.header .header-text {
+    font-size: 18px;
+    color: #E5E7EB;
+}
+
 .hero {
     display: flex;
+    flex-wrap: wrap;
+    background-color: #1F2937;
 }
 
 .left-side {
-    display: flex;
-    flex-direction: column;
+    margin: 100px;
+    width: 500px;
+    flex: 1 1 0;
+}
+
+.left-side h1 {
+    font-size: 48px;
+    color: #F9FAF8;
+    font-weight: 900;
+}
+
+.left-side p {
+    width: 500px;
+    font-size: 18px;
+    color: #E5E7EB;
+}
+
+.left-side button {
+    padding: 10px 25px 10px 25px;
+    border-radius: 10px;
+    background-color: #3882F6;
+    color: #E5E7EB;
+    font-weight: 900;
+    border-color: #E5E7EB;
+    border-style: solid;
+
+}
+
+.right-side img {
+    width: 700px;
+    height: 300px;
     margin: 100px;
 }
-.left-side button {
-    flex: 0 1 100px;
+
+.right-side {
+    flex: 1    
+}
+
+.features h2 {
+    text-align: center;
+    font-size: 36px;
+    color: #1F2937;
+    font-weight: 900;
+    margin-top: 100px;
+    margin-bottom: 100px;
+}
+
+.features-img-text {
+    display: flex;
+    justify-content: center;
+    gap: 100px;
+    margin-bottom: 200px;
+}
+
+.features-img-text img {
+    border-radius: 20px;
+    border-width: 2px;
+    border-style: solid;
+    border-color: #3882F6;
+    width: 150px;
+    height: auto;
+}
+
+.features-img-text p{
+    width: 150px;
+    text-align: center;
+}
+
+.socialproof {
+    padding: 200px;
+    background-color: #E5E7EB;
+}
+
+.socialproof .sp-text {
+    font-size: 36px;
+    font-style: italic;
+    font-weight: 100;
+    color: #1F2937;
+}
+
+.socialproof .sp-author {
+    text-align: right;
+    padding-right: 50px;
+    color: #1F2937;
+    font-size: 24px;
+    font-weight: 900;
+}
+
+.cta {
+    padding: 200px;
+}
+
+.card {
+    display: flex;
+    background-color: #3882F6;
+    padding: 50px;
+    border-radius: 10px;
+}
+
+.card .cta-text {
+    flex: 1;
+}
+
+.cta-text h3 {
+    color: #F9FAF8;
+    font-size: 24px;
+}
+
+.cta-text p {
+    color: #E5E7EB;
+    margin-top: -10px;
+
+}
+.button-cta{
+    flex: 0.5 1 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.button-cta button {
+    border-radius: 10px;
+    padding: 10px 25px 10px 25px;
+    border-width: 2px;
+    border-color: #F9FAF8;
+    border-style: solid;
+    color: #F9FAF8;
+    background-color: #3882F6;
+    font-weight: 900;
+}
+
+.footer {
+    text-align: center;
+    padding: 20px;
+    background-color: #1F2937;
+    color: #F9FAF8;
 }
